--- a/linux-app/dockerfile
+++ b/linux-app/dockerfile
@@ -1,7 +1,7 @@
 FROM node:17
 WORKDIR /app
-COPY package*.json ./
+COPY linux-app/package*.json ./
 RUN npm install
-COPY . .
+COPY linux-app/ ./
 EXPOSE 3000
 CMD ["npm", "start"]
