--- a/linux-app/jenkinsfile
+++ b/linux-app/jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
             steps {
                 script {
                     docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credentials') {
-                        docker.image('linuxapp:latest').push('latest')
+                        docker.image('carlosm011/linuxapp:latest').push('latest')
                     }
                 }
                 sh 'docker pull carlosm011/linuxapp:latest && docker run -d -p 80:80 carlosm011/linuxapp:latest'
