--- a/linux-app/jenkinsfile
+++ b/linux-app/jenkinsfile
@@ -22,10 +22,9 @@ pipeline {
         stage('Deploy to DigitalOcean') {
             steps {
                 script {
-                    docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credentials') {
-                        echo 'Autenticado con Docker Hub'
-                        docker.image('linuxapp:latest').push('latest')
-                    }
+            
+                    sh 'echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_USERNAME --password-stdin'
+                    sh 'docker push carlosm011/linuxapp:latest'
                 }
                 sh 'docker pull carlosm011/linuxapp:latest && docker run -d -p 80:80 carlosm011/linuxapp:latest'
             }
