--- a/linux-app/jenkinsfile
+++ b/linux-app/jenkinsfile
@@ -25,12 +25,12 @@ pipeline {
                     echo 'Autenticando en Docker Hub...'
                     docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credentials') {
                         echo 'Subiendo imagen a Docker Hub...'
-                        docker.image('carlosm011/linuxapp:latest').push('latest')
+                        docker.image('linuxapp:latest').push('latest')
                         echo 'Imagen subida correctamente.'
                     }
                     echo 'Descargando e iniciando contenedor desde Docker Hub...'
-                    sh 'docker pull carlosm011/linuxweb:latest'
-                    sh 'docker run -d -p 80:80 carlosm011/linuxweb:latest'
+                    sh 'docker pull carlosm011/linuxapp:latest'
+                    sh 'docker run -d -p 80:80 carlosm011/linuxapp:latest'
                     echo 'Contenedor desplegado correctamente.'
                 }
             }
