--- a/linux-app/jenkinsfile
+++ b/linux-app/jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
                     echo 'Autenticando en Docker Hub...'
                     docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credentials') {
                         echo 'Subiendo imagen a Docker Hub...'
-                        docker.image('linuxapp:v1').push('latest')
+                        docker.image('linuxapp:v1').push('v1')
                         echo 'Imagen subida correctamente.'
                     }
                     echo 'Descargando e iniciando contenedor desde Docker Hub...'
