--- a/linux-app/jenkinsfile
+++ b/linux-app/jenkinsfile
@@ -10,13 +10,13 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build('linuxapp:v1', '-f linux-app/dockerfile .')
+                    docker.build('carlosm011/linuxapp:v1', '-f linux-app/dockerfile .')
                 }
             }
         }
         stage('Run Tests') {
             steps {
-                sh 'docker run --rm linuxapp:v1 npm test -- --watchAll=false'
+                sh 'docker run --rm carlosm011/linuxapp:v1 npm test -- --watchAll=false'
             }
         }
         stage('Deploy to DigitalOcean') {
@@ -25,7 +25,7 @@ pipeline {
                     echo 'Autenticando en Docker Hub...'
                     docker.withRegistry('https://registry.hub.docker.com', 'dockerhub-credentials') {
                         echo 'Subiendo imagen a Docker Hub...'
-                        docker.image('linuxapp').push('v1')
+                        docker.image('carlosm011/linuxapp:v1').push('v1')
                         echo 'Imagen subida correctamente.'
                     }
                     echo 'Descargando e iniciando contenedor desde Docker Hub...'
